exports_files(
    srcs = [
        "browser_protocol.json",
        "js_protocol.json",
    ],
    visibility = [
        "//javascript/node/selenium-webdriver:__pkg__",
        "//py:__pkg__",
    ],
)

py_binary(
    name = "pdl_to_json",
    main = "convert_protocol_to_json.py",
    srcs = [
        "convert_protocol_to_json.py",
        "pdl.py",
    ],
    visibility = [
        "//common/devtools:__subpackages__",
    ],
)
