package(
    default_visibility = [
        "//dotnet/src/webdriver:__pkg__",
        "//dotnet/test/common:__pkg__",
        "//java/src/org/openqa/selenium/manager:__pkg__",
        "//javascript/node/selenium-webdriver:__pkg__",
        "//py:__pkg__",
        "//rb:__pkg__",
    ],
)

alias(
    name = "selenium-manager-linux",
    actual = "@download_sm_linux//file",
)

alias(
    name = "selenium-manager-macos",
    actual = "@download_sm_macos//file",
)

alias(
    name = "selenium-manager-windows",
    actual = "@download_sm_windows//file",
)
