cc_binary (
  name="IEDriver.dll",
  licenses=[
    "notice"
  ],
  deps=[
    "//cpp/webdriver-server:webdriver-server",
    "//third_party/cpp/civetweb:civetweb",
    "//third_party/cpp/json-cpp:json-cpp",
  ],
  includes=[
  ],
  features=[
    "def_file",
  ],
  copts=[
    "/W3",
    "/MT",
    "/O2",
    "/Icpp/webdriver-server",
    "/Ithird_party/cpp/json-cpp/include/json",
    "/Ithird_party/cpp/civetweb",
    "/FIstdafx.h",
    "/DWIN32",
    "/DNDEBUG",
    "/D_WINDOWS",
    "/D_USRDLL",
    "/DIEDRIVER_EXPORTS",
    "/D_USING_V110_SDK71_",
    "/D_UNICODE",
    "/DUNICODE",
  ],
  nocopts="/MD|/DNOMINMAX|/Od",
  defines=[
  ],
  linkshared=True,
  srcs=glob(["**/*.cpp"]) + glob(["**/*.h"]),
  win_def_file="IEDriver.def",
  linkopts=[
    "ws2_32.lib",
    "Rpcrt4.lib",
    "version.lib",
    "iepmapi.lib",
    "psapi.lib",
    "oleacc.lib",
    "comsuppw.lib",
    "wininet.lib",
    "urlmon.lib",
    "kernel32.lib",
    "user32.lib",
    "gdi32.lib",
    "winspool.lib",
    "comdlg32.lib",
    "advapi32.lib",
    "shell32.lib",
    "ole32.lib",
    "oleaut32.lib",
    "uuid.lib",
    "odbc32.lib",
    "odbccp32.lib",
  ],
)

genrule(
  name="resources",
  srcs=["IEDriver.rc"],
  outs=["IEDriver.res"],
  licenses=["notice"],
  cmd="rc /fo\"$(OUTS)\" $(SRCS)",
  local=True,
)
