load("//common:defs.bzl", "copy_file")

copy_file(
    name = "noblur32",
    src = "i386/libnoblur.so",
    out = "i386/x_ignore_nofocus.so",
    visibility = [
        "//dotnet/src/webdriver:__pkg__",
        "//java/src/org/openqa/selenium/firefox/xpi:__pkg__",
    ],
)

copy_file(
    name = "noblur64",
    src = "amd64/libnoblur64.so",
    out = "amd64/x_ignore_nofocus.so",
    visibility = [
        "//dotnet/src/webdriver:__pkg__",
        "//java/src/org/openqa/selenium/firefox/xpi:__pkg__",
    ],
)
