cc_library (
  name="webdriver-server",
  licenses=[
    "notice"
  ],
  deps=[
    "//third_party/cpp/civetweb:civetweb",
    "//third_party/cpp/json-cpp:json-cpp",
  ],
  includes=[
  ],
  hdrs=[
    "command.h",
    "command_handler.h",
    "command_types.h",
    "errorcodes.h",
    "keycodes.h",
    "logging.h",
    "response.h",
    "server.h",
    "session.h",
    "uri_info.h",
  ],
  copts=[
    "/W0",
    "/MT",
    "/O2",
    "/Ithird_party/cpp/civetweb",
    "/Ithird_party/cpp/json-cpp/include/json",
    "/FIprecompile.h",
    "/DWIN32",
    "/DNDEBUG",
    "/D_LIB",
    "/D_USING_V110_SDK71_",
  ],
  defines=[
  ],
  srcs=[
    "command.cc",
    "precompile.cc",
    "precompile.h",
    "response.cc",
    "server.cc",
    "uri_info.cc",
  ],
  visibility=[
    "//cpp/iedriver:__pkg__",
  ],
)
