load("@rules_jvm_external//:defs.bzl", "artifact")

exports_files(
    srcs = [
        "maven_upload.txt",
    ],
    visibility = [
        "//visibility:public",
    ],
)

java_binary(
    name = "spotbugs_cli",
    main_class = "edu.umd.cs.findbugs.LaunchAppropriateUI",
    runtime_deps = [
        artifact("com.github.spotbugs:spotbugs"),
    ],
    testonly = True,
    visibility = [
        "//visibility:public",
    ]
)
